# minecraft-essentials

./: Cargo.toml  README.md  contributing.md  flake.nix
.github/workflows/: ci.yml
crate/cli/: Cargo.toml
crate/cli/src/: cwd.rs
crate/core/: Cargo.toml
crate/minecraft-essentails/: Cargo.toml
crate/minecraft-essentails/src/: lib.rs  main.rs
crate/node/: COPYRIGHT  Cargo.toml  README.md  package.json
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs  trait_alias.rs
crates/core/src/auth/: microsoft.rs  mod.rs  xbox.rs
crates/core/src/launch/: java.rs  minecraft.rs  mod.rs
crates/core/src/modrinth/: mod.rs  projects.rs
crates/minecraft-essentails/: Cargo.toml
crates/minecraft-essentails/src/: cwd.rs  lib.rs  main.rs  tests.rs
crates/node/: .gitignore  Cargo.toml  bun.lockb  package.json  tsconfig.json
crates/node/src/: lib.rs
crates/node/testing/: auth.test.ts  launching.test.ts
crates/tauri-plugin-minecraft-essentials/: Cargo.toml  package.json
