[workspace]
members = ["crates/core", "crates/minecraft-essentails", "crates/node"]
default-members = ["crates/minecraft-essentails"]
features = ["default"]

[workspace.package]
version = "0.2.11"
keywords = ["Minecraft", "MinecraftClient", "Essentials"]
authors = ["Eveeifyeve <eveeg1971@gmail.com>"]
description = "A Library that gives all Minecraft client launchers essentials."
homepage = "https://minecraft-essentials.github.io"
repository = "https://github.com/minecraft-essentials/minecraft-essentials"
license-file = "LICENSE"
edition = "2024"
