[package]
edition = "2021"
name = "minecraft-essentials"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.13", default-features = false, features = ["napi4", "tokio"] }
napi-derive = "2.16.13"
minecraft-essentials = { path = "../core" }

[build-dependencies]
napi-build = "2.1.4"

[profile.release]
lto = true
