[package]
name = "core"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.12.12", features = ["json"], optional = true }
serde = { version = "1.0.217", features = ["derive"], optional = true }
clap = { version = "4.5.27", optional = true, features = ["derive"] }
serde_urlencoded = { version = "0.7.1", optional = true }
serde_json = { version = "1.0.137", optional = true }
base64 = { version = "0.22.1", optional = true }
ring = { version = "0.17.8", optional = true }
rand = { version = "0.8.5", optional = true }
hex = { version = "0.4.3", optional = true }
url = { version = "2.5.4", optional = true }
displaydoc = "0.2.5"
thiserror = "2.0.11"
bytes = "1.9.0"
sha-1 = "0.10.1"

[features]
default = ["auth", "cli", "launch", "modrinth", "curseforge"]
auth = [
    "dep:serde_urlencoded",
    "dep:serde_json",
    "dep:reqwest",
    "dep:serde",
    "dep:rand",
    "dep:url",
]
launch = ["dep:serde_json", "dep:serde", "dep:reqwest"]
refresh = ["auth"]
# Mod Platforms
modrinth = ["dep:reqwest"]
curseforge = []
cli = ["dep:clap", "auth"]
