[package]
name = "minecraft-essentials"
documentation = "https://docs.rs/minecraft-essentials"
version.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[build]
rustdocflags = ["--theme=ayu"]

[[bin]]
name = "minecraft-essentials"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-cli"
bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"


[dependencies]
corelib = { path = "../core", default-features = false}
clap = { version = "4.5.27", features = ["derive"], optional = true }
tokio = { version = "1.43.0", features = ["macros"] }
serde = "1.0.217"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.43.0", features = ["macros", "tokio-macros"] }

[features]
default = ["auth", "cli", "launch", "modrinth", "curseforge"]
auth = ["corelib/auth"]
launch = ["corelib/launch"]
refresh = ["corelib/refresh"]
# Mod Platforms
modrinth = ["corelib/modrinth"]
curseforge = ["corelib/curseforge"]
cli = ["dep:clap", "auth"]
