[package]
name = "node"
edition.workspace = true
version.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.13", default-features = false, features = ["napi4", "tokio", "async"] }
napi-derive = "2.16.13"
corelib = { path = "../core" }

[build-dependencies]
napi-build = "2.1.4"

[profile.release]
lto = true
