[package]
name = "tauri-plugin-minecraft-essentails"
description = "Tauri Plugin based on Minecaraft Essentials"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-minecraft-essentails"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tauri = { version = "2.2.4" }
serde = "1.0"
thiserror = "2"
minecraft-essentials = {git = "https://github.com/minecraft-essentials/minecraft-essentials", branch = "0.2.12"}
tokio = { version = "1.45.1", features = ["sync"] }
url = "2.5.4"
open = {version = "5.3.2", optional = true }

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }


[features]
open = ["dep:open"]
